补盲功能细节调整